# ops

./: .env.example  .envrc  .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  .terraform.lock.hcl  CLAUDE.md  README.md  flake.nix  infrastructure.tf  install.sh  main.tf  methylseq.tf  modules.tf  org.tf  pipelines.tf  pyproject.toml  terraform.tfvars  variables.tf
.beads/: issues.jsonl
.claude/skills/pulumi/new-project/templates/: Pulumi.yaml  envrc.template  main_py.template  pyproject.toml
.cursor/: mcp.json
.github/: CODEOWNERS  generate_test_coverage_report.py  renovate.json5  s3_results_tagger.py
docs/: 1password-setup.md  1password.md  actions.md  architecture.md  branding.md  costs.md  pulumi-oidc.md  pulumi.md
hackathon-infra/: .envrc  .gitignore  CLAUDE.md  LICENSE  README.md
invitation-bot/: .envrc  .gitignore  README.md  app.ts  deno.json  deploy.ts  import_map.json  manifest.json  manifest.ts  requirements.txt  (+1 more)
pulumi/AWSMegatests/: .envrc  .gitignore  .terraform.lock.hcl  CLAUDE.md  CLEANUP_SUMMARY.md  CREDENTIALS.md  ESC_SETUP_GUIDE.md  GITHUB_INTEGRATION.md  MIGRATION_TO_TERRAFORM_PROVIDER.md  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.tower.yaml  Pulumi.yaml  README.md  REFACTOR_SUMMARY.md  S3_LIFECYCLE_RULES.md  __main__.py  compute_environments.tf  current-state.json  dev-state.json  esc-definition.yaml  github.tf  github_credential.tf  github_integration.py  iam.tf  import-resources.sh  locals.tf  onepassword.tf  outputs.tf  participants.tf  providers.py  providers.tf  pyproject.toml  requirements.txt  s3.tf  s3_infrastructure.py  secrets_manager.py  seqera_credentials.tf  seqera_deployment.py  seqera_terraform.py  (+8 more)
pulumi/AWSMegatests/.github/workflows/: deploy-seqerakit.yml
pulumi/AWSMegatests/configs/: nextflow-arm.config  nextflow-base.config  nextflow-cpu.config  nextflow-gpu.config
pulumi/AWSMegatests/docs/: README.md
pulumi/AWSMegatests/scripts/: README.md  add_maintainers_to_workspace.py  core_team_data.json  create_unified_team_data.py  fetch_core_team_emails.py  fetch_maintainer_emails.py  maintainers_data.json  map_emails_from_seqera.py  parse_member_status.py  requirements.txt  setup_team_data.py  tag_existing_log_files.py  terraform-provider-issue.md  unified_team_data.json
pulumi/AWSMegatests/seqerakit/: .envrc  CLAUDE.md  LICENSE  README.md  aws_ireland_fusionv2_nvme_cpu_arm_current.yml  aws_ireland_fusionv2_nvme_cpu_current.yml  aws_ireland_fusionv2_nvme_gpu_current.yml  cpu-arm-nextflow.config  cpu-nextflow.config  current-env-cpu-arm.json  current-env-cpu.json  current-env-gpu.json  gpu-nextflow.config  vars.sh
pulumi/AWSMegatests/seqerakit/compute-envs/: aws_ireland_fusionv2_nvme_arm.yml  aws_ireland_fusionv2_nvme_cpu.yml  aws_ireland_fusionv2_nvme_gpu.yml  aws_ireland_nofusion.yml
pulumi/AWSMegatests/seqerakit/configs/: nextflow-arm.config  nextflow-cpu.config  nextflow-gpu.config
pulumi/AWSMegatests/src/config/: settings.py
pulumi/AWSMegatests/src/infrastructure/: compute_environments.py  credentials.py  s3.py
pulumi/AWSMegatests/src/integrations/: __init__.py  github.py  github_credentials.py  workspace_participants_command.py  workspace_participants_simple.py
pulumi/AWSMegatests/src/providers/: aws.py  github.py  seqera.py
pulumi/AWSMegatests/src/utils/: constants.py
pulumi/AWSMegatests/tests/unit/: test_iam_policy_compliance.py  test_nextflow_config_loading.py
pulumi/igenomes/: .envrc  .gitignore  CLAUDE.md  Pulumi.yaml  README.md  __main__.py  pyproject.toml  test_setup.sh
pulumi/igenomes/src/config/: __init__.py  settings.py
pulumi/igenomes/src/infrastructure/: __init__.py  s3.py
pulumi/igenomes/src/providers/: __init__.py  aws.py
pulumi/igenomes/src/utils/: constants.py
pulumi/seqera_platform/resource_optimization/: Pulumi.yaml  README.md  __init__.py  __main__.py  pyproject.toml  requirements.txt  workspace_config.py
pulumi/seqera_platform/resource_optimization/sdks/seqera/pulumi_seqera/: _inputs.py  _utilities.py  credential.py  data_link.py  get_action.py  get_data_link.py  get_pipeline.py  get_studios.py  get_workflows.py  get_workspace.py  get_workspaces.py  outputs.py  tokens.py  workspace.py
pulumi/seqera_platform/resource_optimization/sdks/seqera/pulumi_seqera-0.25.2.dist-info/: direct_url.json  uv_cache.json
(+271 files in other folders)
