[project]
name = "nf-core-ops"
version = "0.1.0"
description = "nf-core operations and infrastructure management"
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ty>=0.0.0a6",
    "mypy>=1.11.1",
    "pre-commit>=3.0.0",
    "ruff>=0.12.0",
]

# [tool.ty]
# Configuration for ty type checker - using CLI args for now
# ty is in pre-alpha, configuration format may change

[tool.mypy]
# Keep mypy configuration for comparison/fallback
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = [
    "venv/",
    ".venv/",
    "__pycache__/",
]

[tool.ruff]
# Keep existing ruff configuration
target-version = "py312"
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]  # isort 