[project]
name = "aws-megatests"
version = "0.1.0"
description = "Pulumi project for AWS Megatests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.173.0,<4.0.0",
    "pulumi-aws>=6.81.0,<7.0.0",
    "pulumi-github>=6.4.0,<7.0.0",
    "pulumi-command>=1.0.1,<2.0.0",
    "pulumi-seqera",
] 

[tool.uv.sources]
pulumi-seqera = { path = "sdks/seqera" }


[dependency-groups]
dev = [
    "mypy>=1.17.1",
]
