[project]
name = "aws-megatests"
version = "0.1.0"
description = "Pulumi project for AWS Megatests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.173.0,<4.0.0",
    "pulumi-aws>=7.20.0,<7.21.0",
    "pulumi-github>=6.4.0,<7.0.0",
    "pulumi-command>=1.0.1,<2.0.0",
    "pulumi-seqera",
    "requests>=2.28.0",
] 

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=7.0.0",
]

[tool.uv.sources]
pulumi-seqera = { path = "sdks/seqera" }
