[project]
name = "igenomes"
version = "0.1.0"
description = "Pulumi infrastructure for iGenomes S3 management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.100.0,<4.0.0",
    "pulumi-aws>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
